// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management upload form component hides button if cant upload 1`] = `
<header
  class="row-content-block border-top-0 p-2 d-flex"
  issueiid=""
  projectpath=""
>
  <div
    class="d-flex justify-content-between align-items-center w-100"
  >
    <designversiondropdown-stub />
     
    <!---->
  </div>
</header>
`;

exports[`Design management upload form component renders upload design button 1`] = `
<header
  class="row-content-block border-top-0 p-2 d-flex"
  issueiid=""
  projectpath=""
>
  <div
    class="d-flex justify-content-between align-items-center w-100"
  >
    <designversiondropdown-stub />
     
    <uploadbutton-stub />
  </div>
</header>
`;
